<resources>
    <string name="app_name">MJ Mart</string>
    <string name="description_splash">MJ Mart - giải pháp hoàn hảo cho cửa hàng của bạn</string>
    <string name="title_splash">Welcome\nTo MJ Mart</string>
    <string name="start_launch_app">Bắt đầu</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_confirm_password">Nhập lại mật khẩu</string>
    <string name="hint_forgot_pass">Quên mật khẩu</string>
    <string name="email_empty">Email không được bỏ trống</string>
    <string name="email_wrong">Email không hợp lệ</string>
    <string name="password_empty">Mật khẩu tối thiểu 8 ký tự</string>
    <string name="password_wrong">Mật khẩu nhập lại không trùng nhau</string>
    <string name="password_min">Mật khẩu tối thiểu 6 ký tự</string>

    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="confirm_pass">Xác nhận</string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_bills">Hoá đơn</string>
    <string name="title_products">Quản lý hàng hoá</string>
    <string name="title_menu">Menu</string>

    <string name="title_welcome">Chào %s</string>
    <string name="customer">Nhân viên</string>
    <string name="list_job">Công việc</string>
    <string name="orders_of_the_day">Đơn hàng trong ngày</string>

    <string name="title_manager">Quản lý</string>
    <string name="phone_number">SĐT: %s</string>
    <string name="title_staff">Nhân viên</string>
    <string name="hint_search_employee">Tìm kiếm nhân viên</string>
    <string name="hint_search_customer">Tìm kiếm</string>
    <string name="hint_search_ci">Tìm kiếm</string>
    <string name="error">Có lỗi xảy ra!</string>
    <string name="title_active">Hoạt động</string>
    <string name="title_deactivate">Vô hiệu hoá</string>

    <string name="description_ci">ID: %s</string>
    <string name="description_product">Mã sản phẩm: %s</string>
    <string name="description_supplier">SĐT: %s</string>
    <string name="create_ci">Thêm ngành hàng</string>
    <string name="title_ci">Ngành hàng</string>
    <string name="title_delete_ci">Bạn có chắc chắn muốn vô hiệu hoá Ngành hàng %s?</string>
    <string name="edit_ci">Sửa ngành hàng</string>
</resources>