<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/forget_pass"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:paddingStart="1dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintWidth_percent="0.9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/email_empty"
        android:textColor="#FF0000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/edtEmail"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnForgetPass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/confirm_pass"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintWidth_percent="0.9" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@id/btnForgetPass"
        app:layout_constraintStart_toStartOf="@id/btnForgetPass"
        app:layout_constraintTop_toBottomOf="@id/btnForgetPass"
        app:layout_constraintWidth_percent="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>