<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:clickable="true"
    android:background="@color/white"
    android:focusable="true">

    <!-- TODO: Update blank fragment layout -->
    <ImageButton
        android:id="@+id/imgTroVeDatLaiMatKhau"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTieuDeDatLaiMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Đặt lại mật khẩu"
        android:textColor="#000000"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgTroVeDatLaiMatKhau" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingStart="1dp"
        android:paddingEnd="40dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/password_empty"
        android:textColor="#FF0000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivShowPassword"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@id/edtPassword"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintTop_toTopOf="@id/edtPassword"
        app:srcCompat="@drawable/baseline_remove_red_eye_24" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_confirm_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingStart="1dp"
        android:paddingEnd="40dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintWidth_percent="0.9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirmError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/password_empty"
        android:textColor="#FF0000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/edtConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivShowConfirmPassword"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@id/edtConfirmPassword"
        app:layout_constraintEnd_toEndOf="@id/edtConfirmPassword"
        app:layout_constraintTop_toTopOf="@id/edtConfirmPassword"
        app:srcCompat="@drawable/baseline_remove_red_eye_24" />


    <Button
        android:id="@+id/btnXacNhanDatLaiMatKhau"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_button"
        android:text="Xác nhận"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>